# project-firestarter

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  firestarter.config.json
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ai-pr-review.yml  auto-merge.yml  ci.yml
docs/: ADDING-A-STACK.md  ANATOMY.md  LESSONS.md  LIFT-LOG.md  REMOTE-ACCESS.md  index.html
examples/: buddy.answers.json  chrome-extension.answers.json  fastapi-next.answers.json  healer.answers.json  pilgrim.answers.json  supabase-flutter.answers.json
stacks/chrome-extension/: Makefile  docker-compose.yml
stacks/chrome-extension/e2e/: .gitignore  README.md  package.json  playwright.config.ts  tsconfig.json
stacks/chrome-extension/extension/: package.json  tsconfig.json  vitest.config.ts
stacks/fastapi-next/: DEPLOY.md  Makefile  docker-compose.yml
stacks/fastapi-next/backend/: .dockerignore  Dockerfile  pyproject.toml
stacks/fastapi-next/backend/app/: main.py
stacks/fastapi-next/backend/migrations/: 001_init.sql
stacks/fastapi-next/backend/tests/: test_health.py
stacks/fastapi-next/backend/tests/integration/: test_items_integration.py
stacks/supabase-flutter/: DEPLOY.md  Makefile  docker-compose.yml
template/: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .gitmessage  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PROJECT_STATUS_AND_NEXT_STEPS.md  README.md  SECURITY.md
template/.claude/: README.md  settings.json
template/.githooks/: README.md  commit-msg  pre-commit  pre-push
template/.github/: pull_request_template.md
template/docs/: COMPLIANCE_POSTURE.md  DEPLOY_POLICY.md  FEATURE_HANDOFF.md  GO_LIVE.md  HOST_REQUIREMENTS.md  LOCAL_TLS.md  OPEN_QUESTIONS.md  REMOTE_AGENT_ACCESS.md  STORYBOARD.md  ci-secrets.md  migration-rollback.md  storyboard-harness.md  storyboard.md
template/scripts/: ai-review.sh  smoke.sh  verify-env.sh
(+129 files in other folders)
