[project]
name = "{{ project_slug }}-backend"
version = "0.1.0"
description = "{{ project_tagline }}"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
# The editable install (`pip install -e`) runs in the Dockerfile before `COPY . .`,
# so setuptools finds zero packages and maps nothing — `import app` then fails under
# pytest. uvicorn already adds the rootdir to sys.path (--app-dir defaults to "."); do
# the same for pytest so a freshly stamped project's Tests job is green. See #13.
pythonpath = ["."]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "integration: requires a live Postgres (set TEST_DATABASE_URL; run `make backend-itest`)",
]
